@@ -1,15 +1,12 @@
-@file:Suppress("LocalVariableName", "VariableNaming", "PropertyName")
-
-val checkerFrameworkVersion: String by extra
-val kotlin_version: String by extra
+group = "com.google.j2objc"
+version = "3.0"
 
 plugins {
-    java
     idea
+    java
     `java-library`
     kotlin("jvm")
-    id("com.adarshr.test-logger")
-    `maven-publish`
+    alias(libs.plugins.adarshr.test.logger)
 }
 
 repositories {
@@ -18,7 +15,7 @@ repositories {
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(11)
+    toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
 sourceSets {
@@ -36,34 +33,33 @@ sourceSets {
 }
 
 dependencies {
-    implementation("com.google.j2objc:j2objc-annotations:3.1")
-    implementation("com.google.j2objc:j2objc-kompat:3.0")
-    implementation("com.google.j2objc:jre_emul:3.0")
+    implementation(project(":j2objc-annotations"))
+    implementation(project(":j2objc-jre_emul"))
+    implementation(project(":j2objc-kompat"))
 
-    implementation("com.google.code.findbugs:jsr305:3.0.2")
-    implementation("com.google.guava:guava:33.5.0-jre")
-    implementation("org.bitbucket.mstrobel:procyon-compilertools:0.6.0")
-    implementation("org.bitbucket.mstrobel:procyon-core:0.6.0")
-    implementation("org.jspecify:jspecify:1.0.0")
-    implementation("org.plumelib:plume-util:1.12.3")
+    implementation(libs.findbugs.jsr305)
+    implementation(libs.guava)
+    implementation(libs.procyon.compiler.tools)
+    implementation(libs.procyon.core)
+    implementation(libs.jspecify)
+    implementation(libs.plumelib.util)
 
     // Sync with eisop version used in Makefile
-    implementation("org.checkerframework:checker:$checkerFrameworkVersion")
+    implementation(libs.checkerframework.checker)
 
-    //noinspection NewerVersionAvailable - 6.0.0+ require JDK 17
-    implementation(platform("org.junit:junit-bom:5.14.2"))
-    implementation("org.junit.vintage:junit-vintage-engine")
-    implementation("org.slf4j:slf4j-nop:2.0.17")
+    implementation(platform(libs.junit.bom))
+    implementation(libs.junit.vintage.engine)
+    runtimeOnly(libs.junit.platform.launcher)
+    implementation(libs.slf4j.nop)
 
-    testImplementation("com.google.flogger:flogger:0.9")
-    testImplementation("com.google.flogger:google-extensions:0.9")
-    //noinspection NewerVersionAvailable - Use the same version as `jars.mk`
-    testImplementation("org.hamcrest:hamcrest-all:1.3")
+    testImplementation(libs.google.flogger)
+    testImplementation(libs.google.flogger.extensions)
+    testImplementation(libs.hamcrest.all)
 
     // kotlin interop >>
-    implementation("org.jetbrains.kotlin:kotlin-metadata-jvm:$kotlin_version")
+    implementation(libs.kotlin.metadata.jvm)
 
-    testImplementation("com.mirego:kotlin-test-cases:$version")
+    testImplementation(project(":j2objc-kotlin-interop-test-cases"))
     // kotlin interop <<
 }
 
@@ -73,8 +69,8 @@ tasks.withType<Test>().configureEach {
 
     // kotlin interop >>
     dependsOn(
-        gradle.includedBuild("j2objc-kompat").task(":jvmJar"),
-        gradle.includedBuild("j2objc-kompat").task(":j2objcKotlinTypes"),
+        ":j2objc-kompat:jvmJar",
+        ":j2objc-kompat:j2objcKotlinTypes",
     )
     // kotlin interop <<
 }
@@ -89,21 +85,34 @@ tasks.named<JavaCompile>("compileJava") {
     options.compilerArgs.add("--add-exports=java.compiler/javax.lang.model.util=ALL-UNNAMED")
     options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
     options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
     options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+    options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
     options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
     options.compilerArgs.add("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
 }
 
-tasks.named<Javadoc>("javadoc") {
-    isFailOnError = false
+tasks.test {
+    jvmArgs(
+        "--add-exports=java.compiler/javax.lang.model.element=ALL-UNNAMED",
+            "--add-exports=java.compiler/javax.lang.model.type=ALL-UNNAMED",
+            "--add-exports=java.compiler/javax.lang.model.util=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    )
 }
 
-publishing {
-    publications {
-        create<MavenPublication>("library") {
-            from(components["java"])
-        }
-    }
+tasks.named<Javadoc>("javadoc") {
+    isFailOnError = false
 }
 
 idea {
